--- a/app/src/main/res/layout/activity_them_binh_luan.xml
+++ b/app/src/main/res/layout/activity_them_binh_luan.xml
@@ -86,6 +86,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginVertical="20dp"
+                android:enabled="false"
                 android:text="Gửi" />
         </LinearLayout>
     </ScrollView>
