--- a/app/src/main/res/layout/chi_tiet_hinh_anh_nha_xe_chuyen_xe.xml
+++ b/app/src/main/res/layout/chi_tiet_hinh_anh_nha_xe_chuyen_xe.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Hình ảnh nhà xe"
+        android:text="Hình ảnh xe"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
