--- a/app/src/main/res/layout/activity_admin_bus_operator_create.xml
+++ b/app/src/main/res/layout/activity_admin_bus_operator_create.xml
@@ -45,7 +45,8 @@
     <ScrollView
         android:id="@+id/scrollView3"
         android:layout_width="416dp"
-        android:layout_height="564dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/view8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adminBusOperatorListHeader">
@@ -123,7 +124,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/adminBusOperatorNameCreateEt"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:inputType="text" />
                 </com.google.android.material.textfield.TextInputLayout>
 
