--- a/app/src/main/res/layout/activity_admin_bus_ticket.xml
+++ b/app/src/main/res/layout/activity_admin_bus_ticket.xml
@@ -99,7 +99,7 @@
         android:drawableStart="@drawable/ic_search"
         android:drawablePadding="5dp"
         android:padding="10dp"
-        android:hint="Tìm kiếm dựa trên tiêu đề"
+        android:hint="Tìm kiếm dựa trên tên người dùng"
         android:textColorHint="#C6C6C6"
         android:background="@drawable/custom_form_input"
         app:layout_constraintEnd_toEndOf="parent"
